<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_representing_the_splash_screen">Image representing the splash screen</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="textview">TextView</string>
    <string name="textviewCoin">TextView</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="category">you need 50% answer correction of total questions to become a winner</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">Your Name</string>
    <string name="age">Age</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="question_logo">Question logo</string>
    <string name="welcome">Welcome</string>
    <string name="slogan">Nice to meet you! Let\'s make \n your knowledge great</string>
    <string name="categoryimage">categoryImage</string>
    <string name="textProfile">profile</string>
    <string name="left_chance">Left Chance :</string>
    <string name="_1">1</string>
    <string name="spin">Spin</string>
    <string name="spin_vector">Spin vector</string>
    <string name="spin_rotation">Spin rotation</string>
    <string name="spin_clock">Spin clock</string>
    <string name="spin_container">Spin Container</string>
    <string name="question">Question :</string>
    <string name="what_is_your_name">What is Your Name?</string>
    <string name="select_one_of_this">Select One Of This</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="nextoption">NextOption</string>
    <string name="quiz_image">Quiz image</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="personal_information">Personal Information</string>
    <string name="save">Save</string>
    <string name="_22">22</string>
    <string name="country">Country</string>
    <string name="india">India</string>
    <string name="email">Email</string>
    <string name="admin_gamil_com">admin@gamil.com</string>
    <string name="name">Name</string>
    <string name="_name">name</string>
    <string name="star_icon">********</string>
    <string name="button">Button</string>
    <string name="profile_image">Profile image</string>
</resources>