<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile"
    tools:context=".fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="32dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/avtar"
                    android:contentDescription="@string/profile_image" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_extrabold"
                    android:text="@string/textview"
                    android:textColor="?attr/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/textviewshap"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/personal_information"
                        android:textColor="?attr/colorPrimaryDark" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/arrow_icon"
                        android:scaleType="centerCrop"
                        android:src="@drawable/downarrow" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/expadableconstraintlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/button3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonWhite"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/save"
                        android:textColor="?attr/colorPrimaryDark"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
                        app:layout_constraintHorizontal_bias="0.45"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout7"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/textviewshap"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/age"
                            android:textColor="?android:attr/colorEdgeEffect" />

                        <TextView
                            android:id="@+id/age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/_22"
                            android:textColor="?android:attr/textColorHighlight" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/textviewshap"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/country"
                            android:textColor="?android:attr/colorEdgeEffect" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/india"
                            android:textColor="?android:attr/textColorHighlight" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/textviewshap"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/email"
                            android:textColor="?android:attr/colorEdgeEffect" />

                        <TextView
                            android:id="@+id/Email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/admin_gamil_com"
                            android:textColor="?android:attr/textColorHighlight" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/textviewshap"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/name"
                            android:textColor="?android:attr/colorEdgeEffect" />

                        <TextView
                            android:id="@+id/Name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/_name"
                            android:textColor="?android:attr/textColorHighlight" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/textviewshap"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/password"
                            android:textColor="?android:attr/colorEdgeEffect" />

                        <TextView
                            android:id="@+id/passwoord"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/star_icon"
                            android:textColor="?android:attr/textColorHighlight" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonWhite"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/button"
                    android:textColor="?attr/colorPrimaryDark"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.952" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>