<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_1"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/profile_avatar"
            app:srcCompat="@drawable/avtar" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/textview"
            android:textColor="?attr/colorPrimaryDark"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/CoinWithdrawal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coin_icon"
            app:srcCompat="@drawable/coin" />

        <TextView
            android:id="@+id/CoinWithdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/textview"
            android:textColor="?attr/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/categoryimg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/historyimg" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Question :"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/categoryimg"
        app:layout_constraintStart_toStartOf="@+id/categoryimg"
        app:layout_constraintTop_toBottomOf="@+id/categoryimg" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="What is Your Name?"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Select One Of This"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/buttonWhite"
        android:fontFamily="@font/poppins_regular"
        android:text="Option 1"
        android:textColor="?android:attr/colorEdgeEffect"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/opytion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/buttonWhite"
        android:fontFamily="@font/poppins_regular"
        android:text="Option 2"
        android:textColor="?android:attr/colorEdgeEffect"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/option1"
        app:layout_constraintStart_toStartOf="@+id/option1"
        app:layout_constraintTop_toBottomOf="@+id/option1" />

    <Button
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/buttonWhite"
        android:fontFamily="@font/poppins_regular"
        android:text="Option 3"
        android:textColor="?android:attr/colorEdgeEffect"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/opytion2"
        app:layout_constraintStart_toStartOf="@+id/opytion2"
        app:layout_constraintTop_toBottomOf="@+id/opytion2" />

    <Button
        android:id="@+id/Option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/buttonWhite"
        android:fontFamily="@font/poppins_regular"
        android:text=" Option 4"
        android:textColor="?android:attr/colorEdgeEffect"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/option3"
        app:layout_constraintStart_toStartOf="@+id/option3"
        app:layout_constraintTop_toBottomOf="@+id/option3" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonWhite"
        android:fontFamily="@font/poppins_bold"
        android:text="NextOption"
        android:textColor="?android:attr/colorEdgeEffect"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Option4" />

</androidx.constraintlayout.widget.ConstraintLayout>